--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.6",
     "react-background-image": "^1.2.0",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
     "styled-components-media-query": "^1.0.15"
