--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://scottrenz.github.io/howcanihelp",
   "name": "Front-End-III",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.0",
     "react": "^16.8.6",
     "react-background-image": "^1.2.0",
     "react-dom": "^16.8.6",
@@ -14,6 +16,8 @@
     "styled-components-media-query": "^1.0.15"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
