--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://scottrenz.github.io/howcanihelp",
   "name": "Front-End-III",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,8 @@
     "styled-components-media-query": "^1.0.15"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
