--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://scottrenz.github.io/howcanihelp",
+  "homepage": "https://build-week-how-can-you-help.github.io/Front-End-III/",
   "name": "Front-End-III",
   "version": "0.1.0",
   "private": true,
