--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.0",
     "react": "^16.8.6",
     "react-background-image": "^1.2.0",
     "react-dom": "^16.8.6",
