put capitals back case name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://build-week-how-can-you-help.github.io/front-end-iii/",
+  "homepage": "https://build-week-how-can-you-help.github.io/Front-End-III/",
   "name": "front-end-iii",
   "version": "0.1.0",
   "private": true,
