putlower back  in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://build-week-how-can-you-help.github.io/Front-End-III/",
-  "name": "Front-End-III",
+  "name": "front-end-iii",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
