--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "axios": "^0.19.0",
     "gh-pages": "^2.1.0",
     "react": "^16.8.6",
-    "react-background-image": "^1.2.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-select": "^3.0.4",
-    "styled-components": "^4.3.2",
-    "styled-components-media-query": "^1.0.15"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "predeploy": "npm run build",
